2011-10-21  Sam Weinig  <sam@webkit.org>

        Rename WKProcessCluster to WKProcessGroup
        https://bugs.webkit.org/show_bug.cgi?id=70654

        Reviewed by Simon Fraser.

        * UIProcess/API/mac/WKProcessCluster.h: Removed.
        * UIProcess/API/mac/WKProcessCluster.mm: Removed.
        * UIProcess/API/mac/WKProcessClusterInternal.h: Removed.
        * UIProcess/API/mac/WKProcessGroup.h: Copied from Source/WebKit2/UIProcess/API/mac/WKProcessCluster.h.
        * UIProcess/API/mac/WKProcessGroup.mm: Copied from Source/WebKit2/UIProcess/API/mac/WKProcessCluster.mm.
        (-[WKProcessGroup initWithInjectedBundleURL:]):
        * UIProcess/API/mac/WKProcessGroupInternal.h: Copied from Source/WebKit2/UIProcess/API/mac/WKProcessClusterInternal.h.
        * UIProcess/API/mac/WKView.h:
        * UIProcess/API/mac/WKView.mm:
        (-[WKView initWithFrame:processCluster:]):
        * WebKit2.xcodeproj/project.pbxproj:

2011-10-21  Sam Weinig  <sam@webkit.org>

        Remove ability to create a WKView without a WKContextRef and WKPageGroupRef
        https://bugs.webkit.org/show_bug.cgi?id=70653

        Reviewed by Simon Fraser.

        Requiring a context and pagegroup removes the concept of global contexts,
        which is something that is both confusing, and makes Objective-C wrapping
        harder.

        * UIProcess/API/mac/WKView.mm:
        (-[WKView initWithFrame:processCluster:]):
        * UIProcess/API/mac/WKViewPrivate.h:
        Remove init methods that didn't take both a context and a pagegroup.

2011-10-21  Alexey Proskuryakov  <ap@apple.com>

        [WK2] Crash after printing a view with accelerated compositing content
        https://bugs.webkit.org/show_bug.cgi?id=70643
        <rdar://problem/9479083>

        Reviewed by Darin Adler.

        * UIProcess/API/mac/WKPrintingView.mm: (-[WKPrintingView _delayedResumeAutodisplayTimerFired]):