@@ -1,5 +1,15 @@
 2011-10-21  Sam Weinig  <sam@webkit.org>
 
+        Mark member variables of WebKit2 API @private
+        https://bugs.webkit.org/show_bug.cgi?id=70655
+
+        Reviewed by Simon Fraser.
+
+        * UIProcess/API/mac/WKBrowsingContextController.h:
+        * UIProcess/API/mac/WKView.h:
+
+2011-10-21  Sam Weinig  <sam@webkit.org>
+
         Rename WKProcessCluster to WKProcessGroup
         https://bugs.webkit.org/show_bug.cgi?id=70654
 
